--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -10,5 +10,36 @@ set.seed(10)
 
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species))
+  mutate(Species = as.character(Species)) %>% 
+  # Clean variable names
+  janitor::clean_names()
+```
+
+``` r
+# Create vector argument x 
+x = vector("list", length = 5)
+
+# Create a function "q1_f"
+q1_f = function(x) {
+  # If input is numeric, replace value with the mean of this column
+  if (is.numeric(x)) {
+  replace(x, is.na(x), mean(x, na.rm = TRUE))
+  } 
+  # If input is not numeric, replace value with "virginica"
+  else if (!is.numeric(x)) {
+    replace(x, is.na(x), "virginica")
+  }
+}
+
+# Apply q1_f function to each column of dataset
+x = map(iris_with_missing, q1_f)
+
+# Updated iris dataset
+iris_without_missing = tibble(
+  sepal_length = x$sepal_length,
+  sepal_width = x$sepal_width,
+  petal_length = x$petal_length,
+  petal_width = x$sepal_width,
+  species = x$species
+)
 ```
