q2 - spaghetti plot and comments

--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -68,6 +68,29 @@ q2_df = tibble(
          file_names = str_replace(file_names, ".csv", ""),
          subject_id = str_replace(subject_id, ".csv", ""),
          group = str_replace(group, "con", "control"),
-         group = str_replace(group, "exp", "experiment")
+         group = str_replace(group, "exp", "experimental")
   )
 ```
+
+``` r
+# Spaghetti plot
+q2_df %>% 
+  ggplot(aes(x = week, y = observation, group = subject_id, color = subject_id)) +
+  geom_line() + 
+  facet_grid(~group) +
+  labs(x = "Week", 
+       y = "Observation",
+       title = "Observations on each subject over time",
+       fill = "Subject ID"
+    ) +
+  theme(strip.text = element_text(size = 12, face = 'bold'))
+```
+
+<img src="p8105_hw5_dz2426_files/figure-gfm/unnamed-chunk-4-1.png" width="100%" />
+
+**Comments:**  
+The spaghetti plot shows larger values for subjects in experimental
+group compared to those in control group. Furthermore, observations on
+experimental subjects indicated a positive trend over time, while
+subjects in control group did not show significant difference after 8
+weeks.
