--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -36,10 +36,10 @@ x = map(iris_with_missing, q1_f)
 
 # Updated iris dataset
 iris_without_missing = tibble(
-  sepal_length = x$sepal_length,
-  sepal_width = x$sepal_width,
-  petal_length = x$petal_length,
-  petal_width = x$sepal_width,
+  sepal_length = round(x$sepal_length, digits = 1),
+  sepal_width = round(x$sepal_width, digits = 1),
+  petal_length = round(x$petal_length, digits = 1),
+  petal_width = round(x$sepal_width, digits = 1),
   species = x$species
 )
 ```
