--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -41,8 +41,39 @@ iris_without_missing = tibble(
   petal_length = round(x$petal_length, digits = 1),
   petal_width = round(x$sepal_width, digits = 1),
   species = x$species
-)
+) %>% 
+  # Show the first 22 rows which indicate the success of filling NA
+  head(22)
+
+knitr::kable(iris_without_missing, caption = "Table 1: First 22 rows of Iris dataset")
 ```
+
+| sepal\_length | sepal\_width | petal\_length | petal\_width | species   |
+| ------------: | -----------: | ------------: | -----------: | :-------- |
+|           5.1 |          3.5 |           1.4 |          3.5 | setosa    |
+|           4.9 |          3.0 |           1.4 |          3.0 | setosa    |
+|           4.7 |          3.2 |           1.3 |          3.2 | setosa    |
+|           4.6 |          3.1 |           1.5 |          3.1 | setosa    |
+|           5.0 |          3.6 |           1.4 |          3.6 | setosa    |
+|           5.4 |          3.9 |           1.7 |          3.9 | setosa    |
+|           5.8 |          3.4 |           1.4 |          3.4 | setosa    |
+|           5.0 |          3.4 |           1.5 |          3.4 | setosa    |
+|           4.4 |          2.9 |           1.4 |          2.9 | setosa    |
+|           4.9 |          3.1 |           3.8 |          3.1 | setosa    |
+|           5.4 |          3.1 |           1.5 |          3.1 | setosa    |
+|           4.8 |          3.4 |           1.6 |          3.4 | setosa    |
+|           5.8 |          3.1 |           1.4 |          3.1 | setosa    |
+|           4.3 |          3.0 |           3.8 |          3.0 | setosa    |
+|           5.8 |          4.0 |           3.8 |          4.0 | setosa    |
+|           5.7 |          4.4 |           1.5 |          4.4 | setosa    |
+|           5.4 |          3.9 |           1.3 |          3.9 | setosa    |
+|           5.1 |          3.5 |           1.4 |          3.5 | setosa    |
+|           5.7 |          3.8 |           1.7 |          3.8 | setosa    |
+|           5.1 |          3.8 |           1.5 |          3.8 | setosa    |
+|           5.4 |          3.4 |           1.7 |          3.4 | setosa    |
+|           5.1 |          3.7 |           1.5 |          3.7 | virginica |
+
+Table 1: First 22 rows of Iris dataset
 
 # Problem 2
 
