--- a/p8105_hw5_dz2426.Rmd
+++ b/p8105_hw5_dz2426.Rmd
@@ -144,7 +144,7 @@ lm_rerun = rerun(10000, sim_regression(n = 30, beta1 = 0)) %>%
 sim_result_beta1s = 
   tibble(beta1s = c(1:6)) %>% 
   mutate(
-    output_list = map(.x = beta1s, ~rerun(30, sim_regression(n = 30, beta1 = .x))), 
+    output_list = map(.x = beta1s, ~rerun(10000, sim_regression(n = 30, beta1 = .x))), 
     output_df = map(output_list, bind_rows)
   ) %>% 
   select(-output_list) %>% 
@@ -177,5 +177,38 @@ q3_plot1 %>%
 ```
 
 **Comments:**  
-The plot shows that the power of the test has a positive association with effect size. The positive gradient decreases as effect size increases.
+The plot shows a positive association between the power of test and effect size. The power increases as the effect size increases.
+
+```{r}
+q3_plot2 = sim_result_beta1s %>% 
+  group_by(beta1s) %>% 
+  # Calculate average estimate for each beta1
+  mutate(mean_beta1_hat = mean(estimate)) %>% 
+  select(beta1s, mean_beta1_hat) %>% 
+  # Remove duplicated rows
+  distinct()
+  
+q3_plot2 %>% 
+  ggplot(aes(x = beta1s, y = mean_beta1_hat)) +
+  geom_point() +
+  geom_line() +
+  scale_x_continuous(breaks = seq(1, 6, by = 1)) +
+  scale_y_continuous(breaks = seq(1, 6, by = 0.5)) + 
+  labs(
+    x = "Beta1", y = "Average beta1 estimate", 
+    title = "Figure 3. Association between average beta1 estimate and effect size",
+    caption = "Simulation iterations: 10000"
+  )
+```
+
+```{r}
+q3_plot3 = sim_result_beta1s %>% 
+  group_by(beta1s) %>% 
+  # Select samples for which H0 was rejected
+  filter(p_value < 0.05) %>% 
+  mutate(mean_beta1_hat = mean(estimate)) %>% 
+  select(beta1s, mean_beta1_hat) %>% 
+  distinct()
+  
+```
 
