--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -111,9 +111,9 @@ q2_df %>%
   facet_grid(~group) +
   labs(x = "Week", 
        y = "Observation",
-       title = "Observations on each subject over time",
-       fill = "Subject ID"
+       title = "Figure 1. Observations on each subject over time"
     ) +
+  scale_color_discrete(name = "Subject ID") +
   theme(strip.text = element_text(size = 12, face = 'bold'))
 ```
 
@@ -125,3 +125,112 @@ group compared to those in control group. Furthermore, observations on
 experimental subjects indicated a positive trend over time, while
 subjects in control group did not show significant difference after 8
 weeks.
+
+# Problem 3
+
+``` r
+# Create linear model regression function
+sim_regression = function(n, beta0 = 2, beta1) {
+  
+  sim_data = tibble(
+    x_i1 = rnorm(n, mean = 0, sd = 1),
+    y_i = beta0 + beta1 * x_i1 + rnorm(n, 0, sqrt(50)) # standard error term~N[0, sqrt50]
+  )
+  
+  ls_fit = lm(y_i ~ x_i1, data = sim_data)
+  broom::tidy(ls_fit)
+}
+
+# Set beta1 = 0, and generate 10000 datasets from the model
+lm_rerun = rerun(10000, sim_regression(n = 30, beta1 = 0)) %>% 
+  bind_rows() %>% 
+  janitor::clean_names() %>% 
+  # select correct p_value
+  filter(term == "x_i1") %>% 
+  select(estimate, p_value)
+```
+
+``` r
+# Map all 6 beta1 values into the output
+sim_result_beta1s = 
+  tibble(beta1s = c(1:6)) %>% 
+  mutate(
+    output_list = map(.x = beta1s, ~rerun(10000, sim_regression(n = 30, beta1 = .x))), 
+    output_df = map(output_list, bind_rows)
+  ) %>% 
+  select(-output_list) %>% 
+  unnest(output_df) %>% 
+  janitor::clean_names() %>% 
+  filter(term == "x_i1") %>% 
+  select(beta1s, term, estimate, p_value)
+```
+
+``` r
+q3_plot1 = sim_result_beta1s %>% 
+  group_by(beta1s) %>% 
+  # Count the number of cases when the null test was rejected or not
+  count(p_value < 0.05) %>% 
+  janitor::clean_names() %>%
+  mutate(proportion = n/sum(n)) %>% 
+  # Show only the proportion of times when null was rejected under each beta1
+  filter(p_value_0_05 == "TRUE")
+
+q3_plot1 %>% 
+  ggplot(aes(x = beta1s, y = proportion)) + 
+  geom_point() +
+  geom_line() +
+  scale_x_continuous(breaks = seq(1, 6, by = 1)) +
+  labs(
+    x = "Beta1", y = "Power", 
+    title = "Figure 2. Association between effect size and power",
+    caption = "Simulation iterations: 10000"
+  )
+```
+
+<img src="p8105_hw5_dz2426_files/figure-gfm/unnamed-chunk-7-1.png" width="100%" />
+
+**Comments:**  
+The plot shows a positive association between the power of test and
+effect size. The power increases as the effect size increases.
+
+``` r
+q3_plot2 = sim_result_beta1s %>% 
+  group_by(beta1s) %>% 
+  # Calculate average estimate for each beta1
+  mutate(mean_beta1_hat = mean(estimate)) %>% 
+  select(beta1s, mean_beta1_hat) %>% 
+  # Remove duplicated rows
+  distinct()
+```
+
+``` r
+q3_plot3 = sim_result_beta1s %>% 
+  group_by(beta1s) %>% 
+  # Select samples for which H0 was rejected
+  filter(p_value < 0.05) %>% 
+  mutate(mean_beta1_hat = mean(estimate)) %>% 
+  select(beta1s, mean_beta1_hat) %>% 
+  distinct()
+
+# Combine two graphs on the sample plot
+ggplot(q3_plot2, aes(x = beta1s)) +
+  geom_point(data = q3_plot2, aes(y = mean_beta1_hat)) +
+  geom_point(data = q3_plot3, aes(y = mean_beta1_hat)) +
+  geom_line(data = q3_plot2, aes(y = mean_beta1_hat, color = 'All samples')) +
+  geom_line(data = q3_plot3, aes(y = mean_beta1_hat, color = 'Samples with H0 rejected')) +
+  scale_x_continuous(breaks = seq(1, 6, by = 1)) +
+  scale_y_continuous(breaks = seq(1, 6, by = 0.2)) + 
+  labs(
+    x = "Beta1", y = "Average beta1 estimate", 
+    title = "Figure 3. Association between average beta1 estimate and true beta1",
+    caption = "Simulation iterations: 10000"
+  ) +
+  scale_colour_discrete(name = "line")
+```
+
+<img src="p8105_hw5_dz2426_files/figure-gfm/unnamed-chunk-9-1.png" width="100%" />
+
+**Comments:** The sample average of beta1 estimate across tests for
+which the null is rejected is approaching the true beta1 value as beta1
+increases.  
+At small beta1 value,
