--- a/p8105_hw5_dz2426.md
+++ b/p8105_hw5_dz2426.md
@@ -145,11 +145,11 @@ weeks.
 sim_regression = function(n, beta0 = 2, beta1) {
   
   sim_data = tibble(
-    x_i1 = rnorm(n, mean = 0, sd = 1),
-    y_i = beta0 + beta1 * x_i1 + rnorm(n, 0, sqrt(50)) # standard error term~N[0, sqrt50]
+    x_i = rnorm(n, mean = 0, sd = 1),
+    y_i = beta0 + beta1 * x_i + rnorm(n, 0, sqrt(50)) # standard error term~N[0, sqrt50]
   )
   
-  ls_fit = lm(y_i ~ x_i1, data = sim_data)
+  ls_fit = lm(y_i ~ x_i, data = sim_data)
   broom::tidy(ls_fit)
 }
 
@@ -158,7 +158,7 @@ lm_rerun = rerun(10000, sim_regression(n = 30, beta1 = 0)) %>%
   bind_rows() %>% 
   janitor::clean_names() %>% 
   # select correct p_value
-  filter(term == "x_i1") %>% 
+  filter(term == "x_i") %>% 
   select(estimate, p_value)
 ```
 
@@ -173,7 +173,7 @@ sim_result_beta1s =
   select(-output_list) %>% 
   unnest(output_df) %>% 
   janitor::clean_names() %>% 
-  filter(term == "x_i1") %>% 
+  filter(term == "x_i") %>% 
   select(beta1s, term, estimate, p_value)
 ```
 
